# simplesocks

./: LICENSE  README.md  pyproject.toml  setup.cfg
simplesocks/: client.py  server.py
