[metadata]
name = simplesocks
version = 0.0.1
author = Dulsara Dhanuka
author_email = dulsara.dhanuka@gmail.com
description = A simple wrapper written on top of standard python sockets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DulsaraDhanuka/simplesocks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    cryptography